--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -6,8 +6,10 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-      </button>
-      <a href="/" class="navbar-brand">gubi-parking</a>
+        <a href="/" class="navbar-brand">
+          <img src="/assets/images/logogubi.png" width="25"/>
+          Gubi
+        </a>
     </div>
     <div uib-collapse="nav.isCollapsed" class="navbar-collapse collapse" id="navbar-main">
       <ul class="nav navbar-nav">
